[gd_scene load_steps=14 format=3 uid="uid://cr2pf64g056g3"]

[ext_resource type="Texture2D" uid="uid://dsme3d6yq3mxs" path="res://assets/sprites/potions/filling_sheet.png" id="1_2unhm"]
[ext_resource type="Script" uid="uid://b8wymhrjv0jlf" path="res://scenes/ui/battle/unit_select_button.gd" id="1_eqp6i"]
[ext_resource type="Texture2D" uid="uid://cjh7q57rx3hfu" path="res://assets/sprites/potions/outline_sheet.png" id="2_eqp6i"]
[ext_resource type="Texture2D" uid="uid://ci4b36vey6ara" path="res://assets/icons/16x16move.png" id="3_057j8"]
[ext_resource type="Texture2D" uid="uid://c4i803i607t3t" path="res://assets/icons/16x16attack.png" id="4_rufao"]

[sub_resource type="AtlasTexture" id="AtlasTexture_egrrk"]
atlas = ExtResource("2_eqp6i")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_erphx"]
atlas = ExtResource("1_2unhm")
region = Rect2(32, 0, 32, 32)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ktk7"]
bg_color = Color(0.222923, 0.102412, 0.0593943, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5j4w4"]
bg_color = Color(0.207843, 0.803922, 0.211765, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eqp6i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_057j8"]
bg_color = Color(0.976471, 0.760784, 0.168627, 0.784314)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hp0f2"]
bg_color = Color(0.222923, 0.102412, 0.0593943, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ydllm"]
bg_color = Color(1, 1, 1, 1)

[node name="UnitSelectButton" type="Button"]
custom_minimum_size = Vector2(120, 36)
offset_right = 4.0
offset_bottom = 4.0
script = ExtResource("1_eqp6i")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 3

[node name="InventoryUnitUI6" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="InventoryUnitIcon" type="Control" parent="MarginContainer/InventoryUnitUI6"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2

[node name="BottleIcon" type="TextureRect" parent="MarginContainer/InventoryUnitUI6/InventoryUnitIcon"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
mouse_filter = 2
texture = SubResource("AtlasTexture_egrrk")
stretch_mode = 5

[node name="PotionIcon" type="TextureRect" parent="MarginContainer/InventoryUnitUI6/InventoryUnitIcon"]
unique_name_in_owner = true
modulate = Color(1, 1, 0.168627, 1)
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
mouse_filter = 2
texture = SubResource("AtlasTexture_erphx")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/InventoryUnitUI6"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 2

[node name="Control" type="Control" parent="MarginContainer/InventoryUnitUI6/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/InventoryUnitUI6/VBoxContainer/Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 5)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxFlat_3ktk7")
theme_override_styles/fill = SubResource("StyleBoxFlat_5j4w4")
value = 100.0
show_percentage = false

[node name="ShieldBar" type="ProgressBar" parent="MarginContainer/InventoryUnitUI6/VBoxContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_eqp6i")
theme_override_styles/fill = SubResource("StyleBoxFlat_057j8")
value = 75.0
show_percentage = false

[node name="PotionBar" type="ProgressBar" parent="MarginContainer/InventoryUnitUI6/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxFlat_hp0f2")
theme_override_styles/fill = SubResource("StyleBoxFlat_ydllm")
value = 50.0
show_percentage = false

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/InventoryUnitUI6"]
layout_mode = 2
mouse_filter = 2

[node name="MoveIcon" type="TextureRect" parent="MarginContainer/InventoryUnitUI6/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("3_057j8")
stretch_mode = 5

[node name="AttackIcon" type="TextureRect" parent="MarginContainer/InventoryUnitUI6/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("4_rufao")
stretch_mode = 5

[node name="KeybindLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 123.0
offset_top = 11.0
offset_right = 186.0
offset_bottom = 22.0
text = "[Unassigned]"
